# VisionWeaver

./: .gitattributes  .gitignore  README.md  checkpoints  pyproject.toml  train_visionweaver.py
VisionWeaver/: __init__.py  conversation.py  data_utils.py  mm_utils.py  model_utils.py  utils.py  visionweaver_trainer.py
VisionWeaver/model/: __init__.py  visionweaver_arch.py
VisionWeaver/model/language_model/: visionweaver_qwen.py
VisionWeaver/model/multimodal_encoder/: __init__.py  builder.py  convnext_encoder.py  eva_encoder.py  pix2struct_encoder.py  sam_encoder.py  vary_encoder.py  visionweaver_experts.py
VisionWeaver/model/multimodal_encoder/vision_models/: convnext.py  eva_vit.py  vary.py
configs/: finetune_llama_3b.yaml  finetune_qwen_3b.yaml  pretrain_llama_3b.yaml  pretrain_qwen_3b.yaml  train.yaml
configs/accelerate/: default.yaml
configs/data/: default.yaml
configs/heartbeat/: default.yaml
configs/hydra/: default.yaml
configs/logging/: default.yaml
configs/media/: default.yaml
configs/messages/: default.yaml
configs/model/: default.yaml
configs/prompts/: default.yaml
configs/tokenizer/: default.yaml
configs/tokens/: default.yaml
configs/training/: default.yaml
scripts/: finetune_llama_3b.sh  finetune_qwen_3b.sh  pretrain_llama_3b.sh  pretrain_qwen_3b.sh
visionweaver/: args_utils.py  config.py  constants.py  conversation.py  data_utils.py  mm_utils.py  model_utils.py  utils.py  visionweaver_trainer.py
visionweaver/model/: __init__.py  builder.py  visionweaver_arch.py
visionweaver/model/language_model/: visionweaver_llama.py  visionweaver_qwen.py
visionweaver/model/multimodal_encoder/: __init__.py  base_encoder.py  builder.py  clip_encoder.py  convnext_encoder.py  dino_encoder.py  eva_encoder.py  hf_utils.py  pix2struct_encoder.py  sam_encoder.py  utils.py  vary_encoder.py  visionweaver_encoder.py  visionweaver_experts.py
visionweaver/model/multimodal_encoder/vision_models/: __init__.py  eva_vit.py  eva_vit_builder.py  vary.py  vary_blocks.py  vary_builder.py  vary_encoder.py
visionweaver/model/multimodal_projector/: builder.py
