[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visionweaver"
version = "0.1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "transformers==4.57.3",
    "tokenizers==0.22.1",
    "sentencepiece==0.1.99",
    "shortuuid==1.0.13",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "accelerate==1.12.0",
    "peft==0.18.0",
    "scipy==1.16.3",
    "bitsandbytes==0.49.0",
    "pydantic==2.12.5",
    "markdown2[all]==2.5.4",
    "numpy==1.26.4",
    "gradio==4.16.0",
    "gradio_client==0.8.1",
    "requests==2.32.5",
    "httpx==0.24.0",
    "uvicorn==0.40.0",
    "fastapi==0.127.1",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "timm==1.0.10",
    "deepspeed==0.15.4",
    "ninja==1.13.0",
    "wandb==0.23.1",
    "fvcore==0.1.5.post20221221",
    "loguru==0.7.3",
    "datasets==4.4.2",
    "sacrebleu==2.5.1",
    "evaluate==0.4.6",
    "sqlitedict==2.1.0",
    "tenacity==9.1.2",
    "hf_transfer==0.1.9",
    "huggingface_hub==0.36.0",
    "pillow==10.4.0",
    "pytablewriter==1.2.1"
]

[project.optional-dependencies]
standalone = [
    "shortuuid==1.0.13",
    "httpx==0.24.0",
    "einops==0.6.1",
    "ftfy",
]

build = ["build", "twine"]

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
visionweaver = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
build = { features = ["build"], solve-group = "default" }
standalone = { features = ["standalone"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
